--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "aws s3 sync dist/ s3://dkobak-my-funds --acl public-read",
+    "release": "npm run build && npm run deploy"
   },
   "dependencies": {
     "chart.js": "^4.3.0",
