--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "release": "npm run build && npm run deploy"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.360.0",
     "chart.js": "^4.3.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
@@ -30,7 +31,7 @@
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.3.9",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vite": "^4.3.9"
   }
 }
