--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-vue": "^9.11.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
+    "sass": "^1.63.6",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.4",
     "vite": "^4.3.9"
