--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^3.3.4",
     "vue-chartjs": "^5.2.0",
     "vue-router": "^4.2.2",
-    "vue3-colorpicker": "^2.1.5"
+    "vue3-colorpicker": "^2.1.5",
+    "vuetify": "^3.3.7"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
