--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "release": "npm run build && npm run deploy"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.360.0",
+    "@aws-sdk/client-dynamodb": "^3.363.0",
+    "@aws-sdk/credential-providers": "^3.363.0",
+    "@aws-sdk/s3-request-presigner": "^3.367.0",
+    "amazon-cognito-identity-js": "^6.3.1",
     "chart.js": "^4.3.0",
+    "material-design-icons-iconfont": "^6.7.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.2.0",
