--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@aws-sdk/client-dynamodb": "^3.363.0",
     "@aws-sdk/credential-providers": "^3.363.0",
     "@aws-sdk/s3-request-presigner": "^3.367.0",
+    "@date-io/date-fns": "^2.17.0",
+    "@date-io/dayjs": "^2.17.0",
+    "@mdi/font": "^7.2.96",
     "amazon-cognito-identity-js": "^6.3.1",
     "chart.js": "^4.3.0",
     "material-design-icons-iconfont": "^6.7.0",
