--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@mdi/font": "^7.2.96",
     "amazon-cognito-identity-js": "^6.3.1",
     "chart.js": "^4.3.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "material-design-icons-iconfont": "^6.7.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
